service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world-cluster-ip
spec:
  selector:
    app: go-hello-world
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
