ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: go-hello-world-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: go-hello-world-cluster-ip
              servicePort: 80
